--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.flyway.locations=classpath:db/migration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=ronorothog2003@gmail.com
-spring.mail.password= mjggntyypvhmxrqk
+spring.mail.password=mjggntyypvhmxrqk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
