--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=NotificationService
 server.port=8080
+server.tomcat.uri-encoding=UTF-8
 
 spring.datasource.url=jdbc:postgresql://postgres:5432/NS_db
 spring.datasource.username=SA
