--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,7 @@ jobs:
       - name: Check Maven version
         run: mvn -version  # Проверка установленной версии Maven
 
-      - name: Make Maven wrapper executable
-        run: chmod +x ./mvnw  # Установите права на выполнение для Maven wrapper
-
       - name: Build and test with Maven
         run: |
-          mvn clean install  # Запуск тестов для Spring приложения
+          cd backend  # Переход в поддиректорию backend
+          ./mvnw clean install  # Запуск тестов для Spring приложения
