--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,4 +38,4 @@ jobs:
       - name: Build and test with Maven
         run: |
           cd backend  # Переход в поддиректорию backend
-          ./mvnw clean install  # Запуск тестов для Spring приложения
+          mvn clean install  # Запуск тестов для Spring приложения
